# thiruppugazh-sandhi-rs

./: Cargo.toml  Readme.md
src/: main.rs
