[package]
name = "tamil-web-scrapper"
version = "0.1.0"
author = "Sanjaiyan.P"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false


[dependencies]
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["blocking"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicode-segmentation = "1.13.2"
